# Research-Agent

./: .gitignore  BLOG.md  README.md  pyproject.toml  server.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: ResearchApp.tsx
src/: config.py  graph.py  main.py  state.py
src/agents/: __init__.py  document_analyst.py  orchestrator.py  synthesizer.py  web_researcher.py
src/tools/: __init__.py  doc_loader.py  note_taker.py  search.py
src/utils/: __init__.py  output.py
