[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Multi-agent research assistant powered by LangGraph and LangChain"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "ddgs>=9.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
research-assistant = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
